--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,10 @@
     "@prisma/client": "^5.16.2",
     "@vinejs/vine": "^2.1.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "moment": "^2.30.1",
     "nodemon": "^3.1.4"
   },
   "devDependencies": {
